[Bug] z-index header 101

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@ header {
   // top: -1px;
   background-color: whitesmoke;
   border-bottom: 1px solid rgba(150,150,150,0.3);
-  z-index: 1;
+  z-index: 101;
 
   & section {
     max-width: 1024px;
