--- a/src/containers/Information/Information.scss
+++ b/src/containers/Information/Information.scss
@@ -81,29 +81,5 @@
         text-shadow: 0px 1px 0px #7cacde;
       }
     }
-
-    & .Information-sidebar {
-      grid-column: 7/11;
-      grid-row: 1/3;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      margin: 0 10px;
-
-      & .Information-item {
-        & .Information-element {
-          & .Information-element-price {
-            display: flex;
-            justify-content: right;
-          }
-        }
-      }
-
-      & .Information-totalCost {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-      }
-    }
   }
 }
